<resources>
    <string name="app_name">ARORA</string>
    <string name="tap_to_return"> TAP T0\n CHANGE PROFILE</string>
    <string name="quest_notification"><font fgcolor='#CCCC00'>QUEST NOTIFICATION !</font> \n<font fgcolor='#FFFFFF'>TRY MINDFULLNESS BREATHING</font></string>
    <string name="already_have_an_account">Already have an account? <font fgcolor='#01C6DB'>Login</font></string>
    <string name="Exit"> <font fgcolor='#01C6DB'> Exit </font></string>
    <string name="meditation_tutorial_text">Press the button when \nthe ring around it appears</string>
    <string name="Continue"> <font fgcolor='#6DC49E'> Continue </font></string>
    <string name="PollensEarned">
        <font fgcolor='#FFFFFF'> You have earned </font>
        <font fgcolor='#FFD200'>999</font>
        <font fgcolor='#FFFFFF'> Pollens </font>
    </string>
    <string name="ARPageTitle">Welcome to the AR Page: 10 pollen to start!</string>
    <string name="ARPageTitle2">Catch Butterfly</string>
    <string name="pollen_required_text">10 Pollens are required to start the game, are you sure you want to continue?</string>

    <string name="alert_title_exit">Are you sure you want to leave the game?</string>
    <string name="ARgame_title">Want to catch some butterflies?</string>
    <string name="alert_title_info">Why are you doing this??</string>
    <string name="breathing_title_info">The science behind BREATHING</string>
    <string name="walking_title_info">Why do we WALK?</string>
    <string name="meditation_title_info">Why do we MEDITATE?</string>
    <string name="atrium_title_info">What is an Atrium?</string>
    <string name="butterfly_title_info">What does a BUTTERFLY represent?</string>
    <string name="learning_title_info">Learn about MINDFULNESS</string>
    <string name="practice_title_info">Why to practice MINDFULNESS?</string>
    <string name="affirmation_title_info">What are AFFIRMATIONS?</string>
    <string name="mindfulness_breathing_info">Mindfulness breathing involves taking slow, deep breaths while being aware of yourself, your feelings, and your surroundings</string>
    <string name="mindfulness_walking_info">As you do the mindfulness walking activity, pay attention to your surroundings as you interact with nature and look for elements that remind you of what you have thought about in the meditation activity. As you walk, take time to reflect on your positive associations with the natural elements that you see</string>
    <string name="mindfulness_meditation_info">Mindfulness meditation involves grounding yourself with your surroundings and the earth by taking mindful breaths and thinking about nature. The exercise presents you with relaxing music to listen to as you focus on nature and your presence in the world</string>
    <string name="atrium_info">Visiting the atrium gives you the opportunity to reflect on what you have learned from each of the mindfulness activities. Each butterfly in the atrium has its own quote that relates to what you have learned by using the app. As you read the quotes in the atrium, take time to review the concepts you have learned and practiced so far</string>
    <string name="learning_info">Practicing mindfulness means that you are aware of your thoughts, feelings (both emotional and physical), and surroundings. By participating in the mindfulness activities (breathing, meditation, and walking), you can learn about mindfulness and how to practice it</string>
    <string name="practice_info">There are several activities within ARORA that encourage you to learn about mindful awareness. Superfly, a cooperative AR game, allows you to practice your mindful awareness. By playing Superfly, you practice mindfulness skills such as being aware of your teammate’s needs, your own needs, and your surroundings</string>
    <string name="butterfly_info">The butterfly is meaningful in many ways, varying between different people. Overall our participants told us that butterflies represented growth, positivity, and grace in both Hopi and Navajo cultures. They also appear to represent the transformations that everyone goes through, as well as transitions, such as to different points of their lives or to different phases of life</string>
    <string name="superfly_info"> A sense of place and connection with the earth has significant cultural importance. Superfly involves walking around in nature, connecting with the earth, and collaborating with others to achieve a common goal. When playing Superfly with others, you work together, rather than competing against one another</string>
    <string name="affirmation_info">Mindfulness practices, including affirmations, are consistent with traditional Indigenous beliefs and relate to Indigenious cultural teachings. By practicing affirmations, you can instill positive beliefs within yourself and improve your self-esteem</string>

    <string-array name="breathing_menu_selection">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="butterfly_colors">
        <item>Red</item> <!--B0-->
        <item>Yellow</item> <!--B1-->
        <item>Violet</item> <!--B2-->
        <item>Green</item> <!--B3-->
        <item>Blue</item> <!--B4-->
    </string-array>

    <string-array name="butterfly_counts">
        <item>user_b0_count</item> <!--B0-->
        <item>user_b1_count</item> <!--B1-->
        <item>user_b2_count</item> <!--B2-->
        <item>user_b3_count</item> <!--B3-->
        <item>user_b4_count</item> <!--B4-->
    </string-array>

    <string-array name="mindfulness_description">
        <item>accomplished breathing exercise!</item>
        <item>accomplished meditation exercise!</item>
        <item>accomplished walking exercise!</item>
    </string-array>

    <string-array name="meditation_menu_selection">
        <item>Beginner</item>
        <item>Intermediate</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_defaultTimerText">99</string>

    <string-array name="Pollen_Shop_Items">
        <item></item>
    </string-array>


    <string name="survey_question_1">How is your mood today?</string>
    <string name="survey_question_2">How stressed do you feel today?</string>
    <string name="a_white_butterfly">a white butterfly</string>
    <string name="a_black_butterfly">a black butterfly</string>
    <string name="username">Username</string>
    <string name="password">password</string>

    <string-array name="mood_array_pleasent_unpleasent">
        <item>Very Unpleasent</item>
        <item>Unpleasent</item>
        <item>Neutral</item>
        <item>Pleasant</item>
        <item>Very Pleasant</item>
    </string-array>

    <string-array name="mood_array_calm_tense">
        <item>Very Tensed</item>
        <item>A bit tense</item>
        <item>Neutral</item>
        <item>Just Calm</item>
        <item>Very Calm</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="arora">ARORA</string>
    <string name="breathing_tutorial_text">press and hold green button - when you breathe in. release the button - when breathing out.</string>

    <string name="title_profile">Profile</string>
    <string name="title_practice">Practice</string>
    <string name="title_learn">Learn</string>
    <string name="title_community">Community</string>
    <string name="mindfulness_breathing">Mindfulness Breathing</string>
    <string name="mindfulness_meditation">Mindfulness Meditation</string>
    <string name="mindfulness_walking">Mindfulness Walking</string>

</resources>
