<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_butterfly"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:src="@drawable/orange_butterfly_image" />


    <androidx.cardview.widget.CardView
        style="@style/survey_card_view"

        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/horizontal_margin">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#40ffffff"
            android:orientation="vertical"
            android:padding="@dimen/vertical_margin">

            <EditText
                android:id="@+id/login_email_et"
                style="@style/login_text_views"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_username"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:nextFocusRight="@id/login_password_et"
                android:nextFocusDown="@id/login_password_et"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/login_password_et"
                style="@style/login_text_views"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <CheckBox
                android:id="@+id/saveLoginCheckBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextPassword"
                android:text="Remember Me"
                android:textColor="#FFFfff" />

            <Button
                android:id="@+id/login_button"
                style="@style/buttons"
                android:text="@string/action_login" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/app_name"

        style="@style/inverse_page_header_text_views"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_below="@id/logo_butterfly"

        android:layout_centerHorizontal="true"
        android:text="@string/arora" />

</RelativeLayout>
